--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 <H1>EJemplo de uso deL programa GIT</H1>
-<P>GIT es un software manejador de versiondes de codigo abierto</P>
+<P>GIT es un software manejador de versiondes de codigo abierto
+CREADO POR LINUXS </P>
 <a href="historia.html"> Ver la historia</a>
 </body>
 </html>
