resolviendo el  del año conflicto

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <body>
 <H1>EJemplo de uso deL programa GIT</H1>
 <P>GIT es un software manejador de versiondes de codigo abierto
-CREADO POR LINUXS </P>
+CREADO POR LINUXS 
+Fue creado´en el año 2005</P>
 <a href="historia.html"> Ver la historia</a>
 </body>
 </html>
