--- a/claudia.html
+++ b/claudia.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Pruebas de actualizacion</title>
+	<title>practica git</title>
 </head>
 <body>
 	<h1>Actualizando repositorio remoto</h1>
-	<h2> Prueba 2</h2>
+	<h2>prueba 2</h2>
 </body>
 </html>
